--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initail-scale=1.0" />
+     <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
     <title>trying</title>
 
     <link rel="shortcut icon" href="imgs/chef-2.jpg" type="image/x-icon" />
